--- a/index.html
+++ b/index.html
@@ -35,30 +35,19 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                        Start Bootstrap
+                       Tourney Links
                     </a>
                 </li>
                 <li>
-                    <a href="#">Dashboard</a>
+                    <a id="aboutnav" href="#about">Dashboard</a>
                 </li>
                 <li>
-                    <a href="#">Shortcuts</a>
+                    <a id="bracketnav" href="#live">Shortcuts</a>
                 </li>
                 <li>
-                    <a href="#">Overview</a>
+                    <a id="rules of play" href="#">Overview</a>
                 </li>
-                <li>
-                    <a href="#">Events</a>
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Services</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
+               
             </ul>
         </div>
         <!-- /#sidebar-wrapper -->
@@ -68,9 +57,10 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Simple Sidebar</h1>
-                        <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-                        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
+                        <h1>Friday Follies</h1>
+                        <h3>@ Peg's Pocket</h3> 
+                        <p></p>
+                        <p><code>#page-content-wrapper</code>.</p>
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
                     </div>
                 </div>
