--- a/index.html
+++ b/index.html
@@ -39,13 +39,16 @@
                     </a>
                 </li>
                 <li>
-                    <a id="aboutnav" href="#about">Dashboard</a>
+                    <a id="aboutnav" href="#about">Registration</a>
                 </li>
                 <li>
-                    <a id="bracketnav" href="#live">Shortcuts</a>
+                    <a id="bracketnav" href="#live">Live Bracket</a>
                 </li>
                 <li>
-                    <a id="rules of play" href="#">Overview</a>
+                    <a id="rulesnav" href="#rules">Rules</a>
+                </li>
+                  <li>
+                    <a id="faqnav" href="#faq">FAQ</a>
                 </li>
                
             </ul>
